# onto-pop-temp-var-exp

./: todo.org
code/: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
code/data/case-uco-owl-trafficking/most_common/2025-03-30/: ontology_population_ranked_retrieval_dataset.json  ontology_population_ranked_retrieval_examples.json
code/data/wines-ontology/most_common/2025-03-30/: ontology_population_ranked_retrieval_dataset.json  ontology_population_ranked_retrieval_examples.json
code/results/gpt-4o/case-uco-owl-trafficking/t0.0/: batch_tasks_1.jsonl  params.json
code/results/gpt-4o/case-uco-owl-trafficking/t0.2/: batch_tasks_1.jsonl  params.json
code/results/gpt-4o/case-uco-owl-trafficking/t0.4/: batch_tasks_1.jsonl  params.json
code/results/gpt-4o/case-uco-owl-trafficking/t0.6/: params.json  (+1 more)
code/run_args/gpt-4o/case-uco-owl-trafficking/: t0.0.json  t0.2.json  t0.4.json  t0.6.json  t0.8.json  t1.0.json
code/run_args/gpt-4o/wines-ontology/: t0.0.json  t0.2.json  t0.4.json  t0.6.json  t0.8.json  t1.0.json
code/run_args/llama3-8B/case-uco-owl-trafficking/: t0.0.json  t0.2.json  t0.4.json  t0.6.json  t0.8.json  t1.0.json
code/run_args/llama3-8B/wines-ontology/: t0.0.json  t0.2.json  t0.4.json  t0.6.json  t0.8.json  t1.0.json
code/slurm_jobs/: case_t0.0  case_t0.2  case_t0.4  case_t0.6  case_t0.8  case_t1.0  prototype_job  wines_t0.0  wines_t0.2  wines_t0.4  wines_t0.6  wines_t0.8  wines_t1.0
code/src/onto_pop_temp_var_exp/: definitions.py
code/src/onto_pop_temp_var_exp/analysis/: plot_temp_variation.ipynb  temp_analysis.py
(+946 files in other folders)
